# my-skills-for-ai

./: .gitignore  README.md  pyproject.toml  СПЕЦИФИКАЦИЯ.txt
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/skills/dev-cycle/: SKILL.md
.claude/skills/dev-cycle/references/: dev-cycle-context-template.md  dev-cycle-decisions-template.md  dev-cycle-open-questions-template.md  requirements-template.md  tasks-template.md  tz-template.md
dev-cycle/: SKILL.md
notes_manager.egg-info/: PKG-INFO  SOURCES.txt
obsidian-manager/: SKILL.md  config.schema.yaml
obsidian-manager/.claude-plugin/: marketplace.json  plugin.json
obsidian-manager/examples/: usage_examples.md
obsidian-manager/examples/test_vault/: async-await-notes.md  docker-homelab.md
obsidian-manager/notes_manager.egg-info/: entry_points.txt  requires.txt
obsidian-manager/skills/analyze-tags/: SKILL.md
obsidian-manager/skills/audit/: SKILL.md
obsidian-manager/skills/generate-profile/: SKILL.md
obsidian-manager/skills/search/: SKILL.md
obsidian-manager/src/: __init__.py  main.py
obsidian-manager/src/analyzers/: keyword_extractor.py  sentiment_analyzer.py
obsidian-manager/src/commands/: audit.py  daily_journal.py  generate_profile.py
obsidian-manager/src/core/: config.py  note.py  vault.py
obsidian-manager/src/utils/: md_parser.py  similarity.py  validators.py
skills/: organize-vault.md
skills/daily-journal/: SKILL.md
src/analyzers/: graph_builder.py  semantic_analyzer.py
src/commands/: analyze_tags.py  search.py
src/core/: tags.py
(+1 files in other folders)
